force-app/main/default/objects/Review__c/Review__c.object-meta.xml
<CustomObject>
    <label>レビュー</label>
    <nameField>
        <displayFormat>B-{00000000}</displayFormat>
        <label>レビュー番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>