force-app/main/default/objects/Review__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <label>評価</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>