force-app/main/default/objects/Review__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <formula>HYPERLINK(  Job_Application__r.Candidate__r.Id ,  Job_Application__r.Candidate__r.First_Name__c   &amp; &#39; &#39; &amp; Job_Application__r.Candidate__r.Last_Name__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>候補者</label>
    <type>Text</type>
</CustomField>