force-app/main/default/objects/Review__c/fields/ssh__c.field-meta.xml
<CustomField>
    <fullName>ssh__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>役職</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>レビュー</relationshipLabel>
    <relationshipName>RevYakushoku</relationshipName>
    <type>Lookup</type>
</CustomField>